# rust_latin_square

./: Cargo.toml  README.md
src/: lib.rs
